--- a/project_resources/Info.plist
+++ b/project_resources/Info.plist
@@ -21,7 +21,9 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.91</string>
+	<string>1.92</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.utilities</string>
 	<key>NSContactsUsageDescription</key>
 	<string>Need Contacts Access</string>
 	<key>NSMainNibFile</key>
